--- a/AboutMeSinglePage/package.json
+++ b/AboutMeSinglePage/package.json
@@ -1,7 +1,6 @@
 {
   "name": "aboutmesinglepage",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,6 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
